--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-dom": ">= 16.8.0"
   },
   "dependencies": {
+    "@welldone-software/why-did-you-render": "^6.0.0-rc.1",
     "color-parser": "^0.1.0",
     "merge-value": "^1.0.0",
     "react": "^17.0.1",
+    "react-color": "^3.0.0-beta.3",
     "v8n": "^1.3.3",
     "zustand": "^3.1.4"
   },
