--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "merge-value": "^1.0.0",
     "react": "^17.0.1",
     "react-color": "^3.0.0-beta.3",
+    "react-use-gesture": "^8.1.0-alpha.11",
     "v8n": "^1.3.3",
     "zustand": "^3.1.4"
   },
