--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "react-dom": "../node_modules/react-dom/profiling"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "parcel": "^1.12.4",
