--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
   },
   "dependencies": {
     "@welldone-software/why-did-you-render": "^6.0.0-rc.1",
+    "@xstyled/styled-components": "^1.19.1",
+    "add": "^2.0.6",
     "color-parser": "^0.1.0",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
     "react": "^17.0.1",
     "react-color": "^3.0.0-beta.3",
     "react-use-gesture": "^8.1.0-alpha.11",
+    "styled-components": "^5.2.1",
     "v8n": "^1.3.3",
     "zustand": "^3.1.4"
   },
@@ -53,10 +56,12 @@
     "@storybook/react": "^6.0.28",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/xstyled__styled-components": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.5.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -65,11 +70,9 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.3.0",
-    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
-    "rollup-plugin-postcss": "^3.1.8",
     "size-limit": "^4.7.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
