--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "merge-value": "^1.0.0",
     "react": "^17.0.1",
     "react-color": "^3.0.0-beta.3",
-    "react-use-gesture": "^8.1.0-alpha.11",
+    "react-spring": "^9.0.0-rc.3",
+    "react-use-gesture": "^8.1.0-beta.2",
     "styled-components": "^5.2.1",
     "v8n": "^1.3.3",
     "zustand": "^3.1.4"
