--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "@welldone-software/why-did-you-render": "^6.0.0-rc.1",
     "@xstyled/styled-components": "^1.19.1",
     "add": "^2.0.6",
-    "color-parser": "^0.1.0",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
     "react": "^17.0.1",
     "react-color": "^3.0.0-beta.3",
+    "react-colorful": "^4.4.3",
     "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^8.1.0-beta.2",
     "styled-components": "^5.2.1",
+    "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
     "zustand": "^3.1.4"
   },
@@ -57,6 +58,7 @@
     "@storybook/react": "^6.0.28",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/tinycolor2": "^1.4.2",
     "@types/xstyled__styled-components": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
