--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,7 +6,7 @@
   "files": [
     "README.md"
   ],
-  "imageSize": 100,
+  "imageSize": 80,
   "commit": true,
   "commitConvention": "none",
   "contributors": [
@@ -26,8 +26,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/5003380?v=4",
       "profile": "https://github.com/dbismut",
       "contributions": [
-        "code",
-        "ideas"
+        "ideas",
+        "code"
       ]
     },
     {
@@ -94,5 +94,5 @@
       ]
     }
   ],
-  "contributorsPerLine": 7
+  "contributorsPerLine": 9
 }
