use-twix -> leva

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "use-twix",
+  "projectName": "use-leva",
   "projectOwner": "gsimone",
   "repoType": "github",
   "repoHost": "https://github.com",
