--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -17,7 +17,7 @@
     "types": ["node"],
     "baseUrl": ".",
     "paths": {
-      "use-twix": ["../src"]
-    },
+      "leva": ["../src"]
+    }
   }
 }
