--- a/package.json
+++ b/package.json
@@ -89,11 +89,11 @@
   },
   "size-limit": [
     {
-      "path": "dist/use-twix.cjs.production.min.js",
+      "path": "dist/leva.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/use-twix.esm.js",
+      "path": "dist/leva.esm.js",
       "limit": "10 KB"
     }
   ]
