Spring as a package

--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
   },
   "alias": {
     "@leva/leva": "../packages/leva/src",
+    "@leva/spring": "../packages/spring/src",
     "react": "../node_modules/react",
     "react-dom": "../node_modules/react-dom/profiling"
   },
