--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leva/root",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "private": true,
   "workspaces": [
@@ -28,6 +28,10 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/addons": "^6.1.12",
     "@storybook/react": "^6.1.12",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/tinycolor2": "^1.4.2",
+    "@types/xstyled__styled-components": "^1.19.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "babel-eslint": "^10.0.0",
@@ -45,10 +49,6 @@
     "size-limit": "^4.9.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
   },
   "prettier": {
     "semi": false,
