--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leva/leva",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "dist/leva-leva.cjs.js",
   "license": "MIT",
   "peerDependencies": {
@@ -10,12 +10,11 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "components.ts"
+      "utilities.ts",
+      "plugins/index.ts"
     ]
   },
   "dependencies": {
-    "@types/tinycolor2": "^1.4.2",
-    "@types/xstyled__styled-components": "^1.19.1",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "@xstyled/styled-components": "^2.2.0",
     "@xstyled/system": "^2.2.0",
@@ -25,7 +24,7 @@
     "react-colorful": "^4.4.4",
     "react-dropzone": "^11.2.4",
     "react-spring": "^9.0.0-rc.3",
-    "react-use-gesture": "^9.0.0-beta.11",
+    "react-use-gesture": "^9.0.0",
     "styled-components": "^5.2.1",
     "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
