--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@leva/spring",
+  "name": "@leva-ui/plugin-spring",
   "version": "0.0.1",
-  "main": "dist/leva-spring.cjs.js",
+  "main": "dist/leva-ui-plugin-spring.cjs.js",
   "license": "MIT",
   "peerDependencies": {
     "react-dom": ">= 16.8.0",
     "react": ">= 16.8.0",
-    "@leva/leva": ">=1.0.0"
+    "leva": ">=1.0.0"
   },
   "dependencies": {
     "react-spring": "^9.0.0-rc.3"
