--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -22,7 +22,7 @@
     "merge-value": "^1.0.0",
     "react-colorful": "^4.4.4",
     "react-dropzone": "^11.2.4",
-    "react-merge-refs": "^1.1.0",
+    "react-portal": "^4.2.1",
     "react-use-gesture": "^9.0.0",
     "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
