--- a/sandboxes/leva-busy/package.json
+++ b/sandboxes/leva-busy/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "leva": "https://pkg.csb.dev/gsimone/leva/commit/d40fd5be/leva",
+    "leva": "*",
     "noisejs": "2.1.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
