--- a/sandboxes/leva-scroll/package.json
+++ b/sandboxes/leva-scroll/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "leva-busy",
+  "name": "leva-scroll",
   "version": "1.0.0",
   "description": "This sandbox has been generated!",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "leva": "https://pkg.csb.dev/gsimone/leva/commit/d40fd5be/leva",
+    "leva": "*",
     "noisejs": "2.1.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
