Add @clementcassajus as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -45,7 +45,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/2991360?v=4",
       "profile": "https://github.com/AndrewPrifer",
       "contributions": [
-        "ideas"
+        "ideas",
+        "code"
       ]
     },
     {
@@ -91,6 +92,15 @@
       "profile": "https://github.com/thephoenixofthevoid",
       "contributions": [
         "bug"
+      ]
+    },
+    {
+      "login": "clementcassajus",
+      "name": "clementcassajus",
+      "avatar_url": "https://avatars.githubusercontent.com/u/13033639?v=4",
+      "profile": "https://github.com/clementcassajus",
+      "contributions": [
+        "design"
       ]
     }
   ],
