--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,7 @@
   "imageSize": 80,
   "commit": true,
   "commitConvention": "none",
+  "contributorsSortAlphabetically": true,
   "contributors": [
     {
       "login": "gsimone",
