Adds bi-directional set

--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "react-three-fiber": "^5.3.10",
+    "react-use-gesture": "^9.0.0",
     "three": "^0.123.0"
   },
   "alias": {
