--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -15,11 +15,12 @@
     ]
   },
   "dependencies": {
-    "@stitches/react": "^0.1.0-canary.0",
+    "@stitches/react": "^0.1.0-canary.1",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "clipboard-polyfill": "^3.0.2",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
+    "react": "^16.13.1",
     "react-colorful": "^5.0.0",
     "react-dropzone": "^11.3.1",
     "react-portal": "^4.2.1",
