--- a/package.json
+++ b/package.json
@@ -15,10 +15,30 @@
     "postinstall": "preconstruct dev",
     "build": "preconstruct build",
     "validate": "preconstruct validate",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "size": "yarn size-limit"
   },
+  "size-limit": [
+    {
+      "name": "Leva",
+     "limit": "3s",
+      "path": "packages/leva/dist/leva.*.prod.js"
+    },
+    {
+      "name": "Leva Plugin Spring",
+      "limit": "3s",
+       "path": "packages/plugin-spring/dist/leva-ui-plugin-spring.*.prod.js"
+     }
+  ],
   "repository": "https://github.com/gsimone/leva.git",
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
   "devDependencies": {
+    "@size-limit/preset-big-lib": "^4.9.2",
+    "size-limit": "^4.9.2",
+    "@babel/preset-env": "^7.12.13",
     "@babel/core": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
@@ -47,7 +67,6 @@
     "husky": "^5.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "size-limit": "^4.9.2",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
@@ -58,15 +77,5 @@
     "jsxBracketSameLine": true,
     "tabWidth": 2,
     "printWidth": 120
-  },
-  "size-limit": [
-    {
-      "path": "dist/leva.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/leva.esm.js",
-      "limit": "10 KB"
-    }
-  ]
+  }
 }
