--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-three/drei": "^2.2.12",
+    "@stitches/core": "^0.1.0-canary.1",
+    "@stitches/react": "^0.1.0-canary.1",
     "noisejs": "^2.1.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
