--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -30,5 +30,8 @@
     "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
     "zustand": "^3.3.1"
+  },
+  "devDependencies": {
+    "nice-color-palettes": "^3.0.0"
   }
 }
