chore: add release script for publishing
https://preconstruct.tools/

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "postinstall": "preconstruct dev",
     "build": "preconstruct build",
+    "release": "preconstruct build && yarn publish:packages",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
