--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@leva-ui/plugin-spring",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "dist/leva-ui-plugin-spring.cjs.js",
+  "module": "dist/leva-ui-plugin-spring.esm.js",
   "license": "MIT",
   "peerDependencies": {
     "react-dom": ">=16.8.0",
