chore: update package.json for yarn2

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 
 # dependencies
 node_modules/
-.pnp
-.pnp.js
+.yarn/*
+*/.yarn/
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # testing
 /coverage
