Upgrade to yarn 2 (#95)
chore: update to yarn 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
+        with:
+          install-command: yarn --immutable --silent
 
       # - name: Lint
       #   run: yarn lint
