--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "postinstall": "preconstruct dev",
     "build": "preconstruct build",
-    "release": "preconstruct build && yarn workspaces run publish",
+    "release": "preconstruct build && yarn workspaces foreach npm publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
@@ -57,7 +57,6 @@
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.20.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -79,6 +78,5 @@
     "jsxBracketSameLine": true,
     "tabWidth": 2,
     "printWidth": 120
-  },
-  "dependencies": {}
+  }
 }
