chore: add version to package.json

--- a/sandboxes/leva-busy/package.json
+++ b/sandboxes/leva-busy/package.json
@@ -1,6 +1,7 @@
 {
   "name": "leva-busy",
   "main": "src/index.js",
+  "version": "1.0.0",
   "dependencies": {
     "leva": "*",
     "noisejs": "2.1.0",
