Chore: improves ci workflow (#99)
### Motivation
This PR makes code sandbox sandboxes in the `sandboxes/*` environment usable locally with refresh on code change.

### TLDR
In a terminal, from the lib root directory:

```bash
yarn watch
```

In another terminal, from the sandbox directory, run:

```bash
yarn start
```

### Requisites for sandboxes
To work, the sandboxes need to use the same React version as the lib. Some sandboxes were created using `"react": "17.0.0"`, while the lib dev deps use `"react": "^17.0.01"`. This resulted in `yarn` creating local `node_modules` in each sandbox, which eventually made the sandbox import two different versions of React (which breaks everything).

Also, sandboxes need to have preflight disabled. I'm not 100% sure what that means, but this boils down to changing the start script of each sandbox:

```js
// before
"start": "react-scripts start"

// after
"start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
```


### Caveats
Unfortunately, the `preconstruct` setup doesn't work out of the box here. `preconstruct` should make it easy to streamline the dev and build environments and let developers test their work in both environments without effort.

In **dev mode**, what it does is populate the `/dist` directory of each package with an alias of the entry point source. This is awesome because changing the source refreshes the code without a build step. But in that mode, the sandboxes complain with import errors:

```
Module not found: Can't resolve './components/Boolean' in '/Users/david/repos/controls/packages/leva/src'
```

### The solution
`preconstruct` also has a `watch` mode, which essentially builds the packages and watches for changes. For some reason — which I assume is a bug or me misusing the lib —, running `preconstruct watch` messes up extra entry points and modifies user code (!!).

Fortunately `preconstruct build && preconstruct watch` seem to work properly, to the expens

--- a/sandboxes/leva-ui/package.json
+++ b/sandboxes/leva-ui/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "leva-busy",
-  "main": "src/index.js",
+  "name": "leva-ui",
   "version": "1.0.0",
+  "description": "This sandbox has been generated!",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
     "leva": "*",
-    "noisejs": "2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.3"
+    "react-dropzone": "11.3.1",
+    "react-scripts": "3.4.3",
+    "react-use-gesture": "^9.0.0"
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
