--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --quiet"
+    "build-storybook": "build-storybook --quiet",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "start-example": "cd example && yarn start",
+    "test": "start-server-and-test start-example http://localhost:1234 cypress:run"
   },
   "size-limit": [
     {
@@ -53,6 +57,7 @@
     "@storybook/addon-essentials": "^6.1.17",
     "@storybook/addon-links": "^6.1.17",
     "@storybook/react": "^6.1.17",
+    "@testing-library/cypress": "^7.0.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/tinycolor2": "^1.4.2",
@@ -60,6 +65,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.2.2",
+    "cypress": "^6.5.0",
     "eslint": "^7.20.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -71,6 +77,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "size-limit": "^4.9.2",
+    "start-server-and-test": "^1.12.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
