--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     // error out if import and file system have a casing mismatch. Recommended by TS
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
-    "noEmit": true
+    "noEmit": true,
+    "types": ["cypress", "@testing-library/cypress"]
   }
 }
