--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "sandboxes/*"
+    "demo"
   ],
   "preconstruct": {
     "packages": [
