--- a/demo/src/sandboxes/leva-plugin-spring/package.json
+++ b/demo/src/sandboxes/leva-plugin-spring/package.json
@@ -2,7 +2,7 @@
   "name": "leva-plugin-spring",
   "version": "1.0.0",
   "keywords": [],
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
     "leva": "*",
