adds concurrently to run watch&dev

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "scripts": {
     "postinstall": "preconstruct dev",
-    "dev": "preconstruct dev",
-    "watch": "yarn build && preconstruct watch",
     "build": "preconstruct build",
-    "release": "preconstruct build && yarn workspaces foreach --include './packages/*' npm publish",
+    "dev": "preconstruct dev",
+    "dev:demo": "yarn workspace demo dev",
+    "watch": "yarn build && concurrently \"preconstruct watch\" \"yarn dev:demo\"",
+    "release": "yarn build && yarn workspaces foreach --include './packages/*' npm publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
@@ -60,6 +61,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.2.2",
+    "concurrently": "^6.0.0",
     "eslint": "^7.20.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
