--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build
         run: yarn build
-        
+
   cypress-run:
     needs: build
     runs-on: ubuntu-16.04
@@ -34,5 +34,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          install-command: yarn --frozen-lockfile --silent
           build: yarn build
           start: yarn start-example
