--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,4 @@ jobs:
         run: yarn build
 
       - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          start: yarn start-example
+        run: yarn test
