--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+          working-directory: |
+            .
+            example
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
