--- a/demo/package.json
+++ b/demo/package.json
@@ -8,11 +8,13 @@
     "noisejs": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "regenerator-runtime": "^0.13.7",
     "wouter": "^2.7.3"
   },
   "devDependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "typescript": "^4.1.5",
     "vite": "^2.0.1"
   }
 }
