--- a/demo/src/sandboxes/leva-custom-plugin/package.json
+++ b/demo/src/sandboxes/leva-custom-plugin/package.json
@@ -9,6 +9,8 @@
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "typescript": "^4.1.5"
   },
   "scripts": {
