--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "cypress": "^6.5.0",
     "eslint": "^7.20.0",
     "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
