--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,8 @@
   "name": "demo",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "noisejs": "^2.1.0",
