--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "preconstruct build",
     "dev": "preconstruct dev",
     "watch": "yarn build && concurrently \"preconstruct watch\" \"yarn demo:dev\"",
-    "release": "yarn build && yarn workspaces foreach --include './packages/*' npm publish",
+    "release": "yarn build && yarn workspaces foreach --include leva npm publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
