--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-dom": "^17.0.1",
     "size-limit": "^4.9.2",
     "start-server-and-test": "^1.12.0",
+    "tsd": "^0.14.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
