--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-portal": "^0.0.5",
     "@stitches/react": "^0.1.0-canary.12",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "clipboard-polyfill": "^3.0.2",
@@ -27,7 +28,6 @@
     "merge-value": "^1.0.0",
     "react-colorful": "^5.0.0",
     "react-dropzone": "^11.3.1",
-    "react-portal": "^4.2.1",
     "react-use-gesture": "^9.0.2",
     "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
